# Collision_Mitigation_Using_Collision_Angle

./: .gitignore  Dockerfile  README.md  build.sh  convert_tb3.sh  edt_monitor_node.cpp  robot_footprint.hpp  start_nav2.sh
ReadMes/: README_DAILY_WORKFLOW.md  README_DOCKER.md  README_FIRST_RUN.md  README_FRESH_START.md  README_START.md
src/Collision_Angle_Mitigation/: CMakeLists.txt  mppi_critics.xml  package.xml
src/Collision_Angle_Mitigation/include/: collision_angle_critic.hpp  edt_publisher.hpp
src/Collision_Angle_Mitigation/launch/: edt_publisher.launch.py  tb3_mujoco_nav2.py
src/Collision_Angle_Mitigation/models/: turtlebot3_waffle.xml
src/Collision_Angle_Mitigation/params/: nav2_params.yaml
src/Collision_Angle_Mitigation/src/: collision_angle_critic.cpp  edt_publisher.cpp  edt_publisher_node.cpp
src/collision_angle_mitigation/: CMakeLists.txt  costmap_plugins.xml  mppi_critics.xml  package.xml  plugins.xml
src/collision_angle_mitigation/behavior_trees/: my_bt.xml
src/collision_angle_mitigation/include/: collision_angle_critic.hpp  edt_gradient_estimator.hpp  edt_layer.hpp  edt_publisher.hpp  robot_footprint.hpp
src/collision_angle_mitigation/launch/: bringup_launch.py  circular_simulation_launch.py  edt_publisher.launch.py  navigation_launch.py  rviz_launch.py  slam_launch.py  spawn_tb3.launch.py  tb3_simulation_launch.py  test_circular_robot_launch.py
src/collision_angle_mitigation/maps/: hallway.pgm  hallway.yaml
src/collision_angle_mitigation/msg/: FloatEDM.msg
src/collision_angle_mitigation/params/: nav2_params.yaml
src/collision_angle_mitigation/scripts/: test_runner_node.py
src/collision_angle_mitigation/src/: collision_angle_critic.cpp  edt_gradient_estimator.cpp  edt_layer.cpp  edt_monitor_node.cpp  edt_publisher.cpp  edt_publisher_node.cpp  robot_footprint.cpp
src/collision_angle_mitigation/testing/: test_configuration.json
src/collision_angle_mitigation/testing/obstacles/: box_obstacle.sdf  single_cylinder.sdf  wall_obstacle.sdf
src/collision_angle_mitigation/urdf/: circular_robot.urdf  gz_circular_robot.sdf.xacro
src/collision_angle_mitigation/worlds/: hallway.sdf.xacro
src/emergency_mppi/: CMakeLists.txt  mppi_plugin.xml  package.xml
src/emergency_mppi/include/emergency_mppi/: controller.hpp  critic_data.hpp  critic_function.hpp  critic_manager.hpp  motion_models.hpp  optimizer.hpp
src/emergency_mppi/include/emergency_mppi/critics/: constraint_critic.hpp  cost_critic.hpp  goal_angle_critic.hpp  goal_critic.hpp  obstacles_critic.hpp  path_align_critic.hpp  path_angle_critic.hpp  path_follow_critic.hpp  prefer_forward_critic.hpp  twirling_critic.hpp  velocity_deadband_critic.hpp
src/emergency_mppi/include/emergency_mppi/models/: constraints.hpp  control_sequence.hpp  optimizer_settings.hpp  path.hpp  state.hpp  trajectories.hpp
src/emergency_mppi/include/emergency_mppi/tools/: noise_generator.hpp  parameters_handler.hpp  path_handler.hpp  trajectory_visualizer.hpp  utils.hpp
src/emergency_mppi/include/nav2_mppi_controller/: controller.hpp  critic_data.hpp  critic_function.hpp  critic_manager.hpp  motion_models.hpp  optimizer.hpp
src/emergency_mppi/include/nav2_mppi_controller/critics/: constraint_critic.hpp  cost_critic.hpp  goal_angle_critic.hpp  goal_critic.hpp  obstacles_critic.hpp  path_align_critic.hpp  path_angle_critic.hpp  path_follow_critic.hpp  prefer_forward_critic.hpp  twirling_critic.hpp  velocity_deadband_critic.hpp
src/emergency_mppi/include/nav2_mppi_controller/models/: constraints.hpp  control_sequence.hpp  optimizer_settings.hpp  path.hpp  state.hpp  trajectories.hpp
src/emergency_mppi/include/nav2_mppi_controller/tools/: noise_generator.hpp  parameters_handler.hpp  path_handler.hpp  trajectory_visualizer.hpp  utils.hpp
src/emergency_mppi/src/: controller.cpp  critic_manager.cpp  noise_generator.cpp  optimizer.cpp  parameters_handler.cpp  path_handler.cpp  trajectory_visualizer.cpp
src/emergency_mppi/src/critics/: constraint_critic.cpp  cost_critic.cpp  goal_angle_critic.cpp  goal_critic.cpp  obstacles_critic.cpp  path_align_critic.cpp  path_angle_critic.cpp  path_follow_critic.cpp  prefer_forward_critic.cpp  twirling_critic.cpp  velocity_deadband_critic.cpp
