<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>collision_angle_optimizer</name>
  <version>0.0.1</version>
  <description>C++ MPPI Critic for collision angle mitigation</description>
  <maintainer email="eitanniv@gmail.com">Ethan</maintainer>
  <license>Apache-2.0</license>
  
  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>nav2_core</depend>
  <depend>nav2_mppi</depend>
  <depend>pluginlib</depend>
  <depend>nav2_costmap_2d</depend>

  <export>	
    <build_type>ament_cmake</build_type>
    <nav2_core plugin="${prefix}/mppi_critics.xml" />
  </export>
</package>	
