<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>collision_angle_mitigation</name>
  <version>0.0.0</version>
  <description>Collision Angle Mitigation Critic for Nav2 MPPI</description>
  <maintainer email="user@todo.todo">user</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>nav2_mppi_controller</depend>
  <depend>nav2_core</depend>
  <depend>nav2_costmap_2d</depend>
  <depend>nav_msgs</depend>
  <depend>rcl_interfaces</depend>
  <depend>pluginlib</depend>
  <depend>libopencv-dev</depend>

  <export>
    <build_type>ament_cmake</build_type>
    <nav2_mppi_controller plugin="${prefix}/plugins.xml" />
    <gz_sim_resource_path>${prefix}/share/${name}/worlds</gz_sim_resource_path>
    <gz_sim_resource_path>${prefix}/share/${name}/models</gz_sim_resource_path>
</export>

</package>